--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+
 
 
    .btn.btn-signin {
@@ -32,6 +38,30 @@
     </head>
 
     <body>
+
+
+      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  
+  <a class="navbar-brand" href="#">VendasGilu</a>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Inicio</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                Departamentos
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">Ifantil</a>
+                <a class="dropdown-item" href="#">Maculino</a>
+                <a class="dropdown-item" href="#">Feminino</a>
+              </div>
+               <li class="nav-item">
+              <a class="nav-link" href="#">Login</a>
+            </li>
+            </li>
+       </ul>
+</nav>
 
 
 
@@ -74,31 +104,28 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="card" style="width:400px">
-              <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
+              <img class="card-img-top" src="imagens/ifantil.png" alt="Card image" style="width:50%">
                 <div class="card-body">
                   <h4 class="card-title">IFANTIL</h4>
-                   <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-                     <a href="#" class="btn btn-primary">See Profile</a>
+                     <a href="#" class="btn btn-primary">CONSULTAR CATALOGO</a>
                 </div>
               </div>
           </div>
           <div class="col-sm-4">
             <div class="card" style="width:400px">
-                  <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
+                  <img class="card-img-top" src="imagens/feminina.png" alt="Card image" style="width:100%">
                   <div class="card-body">
                     <h4 class="card-title">FEMININO</h4>
-                    <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-                    <a href="#" class="btn btn-primary">See Profile</a>
+                    <a href="#" class="btn btn-primary">CONSULTAR CATALOGO</a>
                   </div>
                 </div>
           </div>
           <div class="col-sm-4">
             <div class="card" style="width:400px">
-                <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
+                <img class="card-img-top" src="imagens/masculina.png" alt="Card image" style="width:100%">
                 <div class="card-body">
                   <h4 class="card-title">MASCULINO</h4>
-                  <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-                  <a href="#" class="btn btn-primary">See Profile</a>
+                  <a href="#" class="btn btn-primary">CONSULTAR CATALOGO</a>
                 </div>
               </div>
           </div>
