--- a/index.html
+++ b/index.html
@@ -63,12 +63,6 @@
        </ul>
 </nav>
 
-
-
-
-
-
-
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -80,13 +74,13 @@
                </ul>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                   <img src="" alt="Los Angeles" width="1300" height="400">
+                   <img src="imagens/carrosel1.png" alt="Los Angeles" width="1300" height="400">
                 </div>
                 <div class="carousel-item">
-                   <img src="" alt="Chicago" width="1300" height="400">
+                   <img src="imagens/carrosel2.png" alt="Chicago" width="1300" height="400">
                 </div>
                 <div class="carousel-item">
-                   <img src="" alt="New York" width="1300" height="400">
+                   <img src="imagens/carrosel.png" alt="New York" width="1300" height="400">
                 </div>
               </div>
                  <a class="carousel-control-prev" href="#demo" data-slide="prev">
