--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                 <div class="carousel-item">
                    <img src="imagens/carrosel.png" alt="New York" width="1300" height="400">
                 </div>
+                <div class="carousel-item">
+                   <img src="imagens/carrosel3.png" alt="New York" width="1300" height="400">
+                </div>
               </div>
                  <a class="carousel-control-prev" href="#demo" data-slide="prev">
                     <span class="carousel-control-prev-icon"></span>
