--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 
 
+
    .btn.btn-signin {
       background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
   }
@@ -39,29 +40,39 @@
 
     <body>
 
-
-      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  
-  <a class="navbar-brand" href="#">VendasGilu</a>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Inicio</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                Departamentos
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Ifantil</a>
-                <a class="dropdown-item" href="#">Maculino</a>
-                <a class="dropdown-item" href="#">Feminino</a>
+      <div class="main_nav_container">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-right">
+            <div class="logo_container">
+              <a href="#">Gi<span>Lu</span></a>
+            </div>
+            <nav class="navbar">
+              <ul class="navbar_menu">
+                <li><a href="#">principal</a></li>
+                <li><a href="#">fazer compras</a></li>
+                <li><a href="#">promoções</a></li>
+                <li><a href="#">blog</a></li>
+                <li><a href="contact.html">login</a></li>
+              </ul>
+              <ul class="navbar_user">
+                <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+                <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+                <li class="checkout">
+                  <a href="#">
+                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    <span id="checkout_items" class="checkout_items">2</span>
+                  </a>
+                </li>
+              </ul>
+              <div class="hamburger_container">
+                <i class="fa fa-bars" aria-hidden="true"></i>
               </div>
-               <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
-            </li>
-            </li>
-       </ul>
-</nav>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </div>
 
       <div class="container">
         <div class="row">
