--- a/index.html
+++ b/index.html
@@ -1,181 +1,163 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-      <title>Bootstrap Example</title>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-      <style type="text/css">
+      <!DOCTYPE html>
+      <html lang="en">
+      <head>
+        <title>Bootstrap Example</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+        <style type="text/css">
 
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
-
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
 
 
-   .btn.btn-signin {
-      background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
-  }
-  h2, h3, h4, h5, h6 {
-    text-align: center;
-    font-family: "Times New Roman";
-  }
 
-       
 
-      </style>  
-    </head>
+     .btn.btn-signin {
+        background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
+    }
+    h2, h3, h4, h5, h6 {
+      text-align: center;
+      font-family: "Times New Roman";
+    }
 
-    <body>
+         
 
-      <div class="main_nav_container">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-right">
-            <div class="logo_container">
-              <a href="#">Gi<span>Lu</span></a>
-            </div>
-            <nav class="navbar">
-              <ul class="navbar_menu">
-                <li><a href="#">principal</a></li>
-                <li><a href="#">fazer compras</a></li>
-                <li><a href="#">promoções</a></li>
-                <li><a href="#">blog</a></li>
-                <li><a href="contact.html">login</a></li>
-              </ul>
-              <ul class="navbar_user">
-                <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
-                <li class="checkout">
-                  <a href="#">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                    <span id="checkout_items" class="checkout_items">2</span>
-                  </a>
-                </li>
-              </ul>
-              <div class="hamburger_container">
-                <i class="fa fa-bars" aria-hidden="true"></i>
+        </style>  
+      </head>
+
+      <body>
+
+        <div class="main_nav_container">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 text-right">
+              <div class="logo_container">
+                <a href="#">Gi<span>Lu</span></a>
               </div>
-            </nav>
-          </div>
-        </div>
-      </div>
-    </div>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <div id="demo" class="carousel slide" data-ride="carousel">
-               <ul class="carousel-indicators">
-                  <li data-target="#demo" data-slide-to="0" class="active"></li>
-                  <li data-target="#demo" data-slide-to="1"></li>
-                  <li data-target="#demo" data-slide-to="2"></li>
-               </ul>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                   <img src="imagens/carrosel1.png" alt="Los Angeles" width="1300" height="400">
+              <nav class="navbar">
+                <ul class="navbar_menu">
+                  <li><a href="#">principal</a></li>
+                  <li><a href="#">fazer compras</a></li>
+                  <li><a href="#">promoções</a></li>
+                  <li><a href="#">blog</a></li>
+                  <li><a href="contact.html">login</a></li>
+                </ul>
+                <ul class="navbar_user">
+                  <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+                  <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+                  <li class="checkout">
+                    <a href="#">
+                      <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                      <span id="checkout_items" class="checkout_items">2</span>
+                    </a>
+                  </li>
+                </ul>
+                <div class="hamburger_container">
+                  <i class="fa fa-bars" aria-hidden="true"></i>
                 </div>
-                <div class="carousel-item">
-                   <img src="imagens/carrosel2.png" alt="Chicago" width="1300" height="400">
-                </div>
-                <div class="carousel-item">
-                   <img src="imagens/carrosel.png" alt="New York" width="1300" height="400">
-                </div>
-                <div class="carousel-item">
-                   <img src="imagens/carrosel3.png" alt="New York" width="1300" height="400">
-                </div>
-              </div>
-                 <a class="carousel-control-prev" href="#demo" data-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                 </a>
-                 <a class="carousel-control-next" href="#demo" data-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                 </a>
+              </nav>
             </div>
           </div>
         </div>
       </div>
-    </br>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="card" style="width:400px">
-              <img class="card-img-top" src="imagens/ifantil.png" alt="Card image" style="width:50%">
-                <div class="card-body">
-                  <h4 class="card-title">IFANTIL</h4>
-                     <a href="#" class="btn btn-primary">CONSULTAR CATALOGO</a>
+
+
+           <div class="main_slider" style="background-image:url(images/slider_1.jpg)">
+          <div class="container fill_height">
+            <div class="row align-items-center fill_height">
+              <div class="col">
+                <div class="main_slider_content">
+                  <h6>COLEÇÃO PRIMAVERA / VERÃO 2018</h6>
+                  <h1>Ganhe até 30% de desconto em recém-chegados</h1>
                 </div>
               </div>
+            </div>
           </div>
-          <div class="col-sm-4">
-            <div class="card" style="width:400px">
-                  <img class="card-img-top" src="imagens/feminina.png" alt="Card image" style="width:100%">
+        </div>
+
+
+      </br>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="card" style="width:400px">
+                <img class="card-img-top" src="imagens/ifantil.png" alt="Card image" style="width:50%">
                   <div class="card-body">
-                    <h4 class="card-title">FEMININO</h4>
+                    <h4 class="card-title">IFANTIL</h4>
+                       <a href="#" class="btn btn-primary">CONSULTAR CATALOGO</a>
+                  </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card" style="width:400px">
+                    <img class="card-img-top" src="imagens/feminina.png" alt="Card image" style="width:100%">
+                    <div class="card-body">
+                      <h4 class="card-title">FEMININO</h4>
+                      <a href="#" class="btn btn-primary">CONSULTAR CATALOGO</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card" style="width:400px">
+                  <img class="card-img-top" src="imagens/masculina.png" alt="Card image" style="width:100%">
+                  <div class="card-body">
+                    <h4 class="card-title">MASCULINO</h4>
                     <a href="#" class="btn btn-primary">CONSULTAR CATALOGO</a>
                   </div>
                 </div>
+            </div>
           </div>
-          <div class="col-sm-4">
-            <div class="card" style="width:400px">
-                <img class="card-img-top" src="imagens/masculina.png" alt="Card image" style="width:100%">
-                <div class="card-body">
-                  <h4 class="card-title">MASCULINO</h4>
-                  <a href="#" class="btn btn-primary">CONSULTAR CATALOGO</a>
-                </div>
-              </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12">
+              <img src="Alguma foto de oferta">
+            </div>
+          </div>
+        </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <h2><center>Produtos em Destaques</center></h2>
           </div>
         </div>
       </div>
       <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <img src="Alguma foto de oferta">
+          <div class="row">
+            <div class="col-sm-3">
+              <img src="FOTO CORRESPONDENTE AO PRODUTO" class="rounded-circle" alt="Cinque Terre" width="304" height="236"> 
+              <h5><center> Nome do Produto</center></h5>
+              <h6><center>POR "VALOR"</center></h6>
+            </div>
+            <div class="col-sm-3">
+             <img src="FOTO CORRESPONDENTE AO PRODUTO" class="rounded-circle" alt="Cinque Terre" width="304" height="236"> 
+              <h5><center> Nome do Produto</center></h5>
+              <h6><center>POR "VALOR"</center></h6>
+            </div>
+            <div class="col-sm-3">        
+              <img src="FOTO CORRESPONDENTE AO PRODUTO" class="rounded-circle" alt="Cinque Terre" width="304" height="236"> 
+              <h5><center> Nome do Produto</center></h5>
+              <h6><center>POR "VALOR"</center></h6>
+             </div>
+             <div class="col-sm-3">
+              <img src="FOTO CORRESPONDENTE AO PRODUTO" class="rounded-circle" alt="Cinque Terre" width="304" height="236">
+              <h5><center> Nome do Produto</center></h5>
+              <h6><center>POR "VALOR"</center></h6>
+            </div>
           </div>
         </div>
-      </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <h2><center>Produtos em Destaques</center></h2>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-        <div class="row">
-          <div class="col-sm-3">
-            <img src="FOTO CORRESPONDENTE AO PRODUTO" class="rounded-circle" alt="Cinque Terre" width="304" height="236"> 
-            <h5><center> Nome do Produto</center></h5>
-            <h6><center>POR "VALOR"</center></h6>
-          </div>
-          <div class="col-sm-3">
-           <img src="FOTO CORRESPONDENTE AO PRODUTO" class="rounded-circle" alt="Cinque Terre" width="304" height="236"> 
-            <h5><center> Nome do Produto</center></h5>
-            <h6><center>POR "VALOR"</center></h6>
-          </div>
-          <div class="col-sm-3">        
-            <img src="FOTO CORRESPONDENTE AO PRODUTO" class="rounded-circle" alt="Cinque Terre" width="304" height="236"> 
-            <h5><center> Nome do Produto</center></h5>
-            <h6><center>POR "VALOR"</center></h6>
-           </div>
-           <div class="col-sm-3">
-            <img src="FOTO CORRESPONDENTE AO PRODUTO" class="rounded-circle" alt="Cinque Terre" width="304" height="236">
-            <h5><center> Nome do Produto</center></h5>
-            <h6><center>POR "VALOR"</center></h6>
-          </div>
-        </div>
-      </div>
-    </body>
-  </html>
+      </body>
+    </html>
