modificação no banner de apresentação das categorias na pagina index

--- a/index.html
+++ b/index.html
@@ -89,38 +89,36 @@
         </div>
 
 
-      </br>
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-4">
-              <div class="card" style="width:400px">
-                <img class="card-img-top" src="imagens/ifantil.png" alt="Card image" style="width:50%">
-                  <div class="card-body">
-                    <h4 class="card-title">IFANTIL</h4>
-                       <a href="#" class="btn btn-primary">CONSULTAR CATALOGO</a>
-                  </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="card" style="width:400px">
-                    <img class="card-img-top" src="imagens/feminina.png" alt="Card image" style="width:100%">
-                    <div class="card-body">
-                      <h4 class="card-title">FEMININO</h4>
-                      <a href="#" class="btn btn-primary">CONSULTAR CATALOGO</a>
-                    </div>
-                  </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="card" style="width:400px">
-                  <img class="card-img-top" src="imagens/masculina.png" alt="Card image" style="width:100%">
-                  <div class="card-body">
-                    <h4 class="card-title">MASCULINO</h4>
-                    <a href="#" class="btn btn-primary">CONSULTAR CATALOGO</a>
-                  </div>
-                </div>
+      <div class="banner">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="banner_item align-items-center" style="background-image:url(images/banner_1.jpg)">
+            <div class="banner_category">
+              <a href="categories.html">Mulher</a>
             </div>
           </div>
         </div>
+
+        <div class="col-md-4">
+          <div class="banner_item align-items-center" style="background-image:url(images/banner_2.jpg)">
+            <div class="banner_category">
+              <a href="categories.html">Ifantil</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="banner_item align-items-center" style="background-image:url(images/banner_3.jpg)">
+            <div class="banner_category">
+              <a href="categories.html">Homem</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
         <div class="container">
           <div class="row">
             <div class="col-sm-12">
