--- a/index.html
+++ b/index.html
@@ -20,23 +20,10 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
-
-
-
-
-     .btn.btn-signin {
-        background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
-    }
-    h2, h3, h4, h5, h6 {
-      text-align: center;
-      font-family: "Times New Roman";
-    }
-
-         
-
         </style>  
       </head>
+
+
 
       <body>
 
@@ -73,7 +60,6 @@
           </div>
         </div>
       </div>
-
 
            <div class="main_slider" style="background-image:url(images/slider_1.jpg)">
           <div class="container fill_height">
@@ -117,6 +103,50 @@
       </div>
     </div>
   </div>
+
+
+  
+  <div class="deal_ofthe_week">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div class="deal_ofthe_week_img">
+            <img src="images/deal_ofthe_week.png" alt="">
+          </div>
+        </div>
+        <div class="col-lg-6 text-right deal_ofthe_week_col">
+          <div class="deal_ofthe_week_content d-flex flex-column align-items-center float-right">
+            <div class="section_title">
+              <h2>Promoções da semana</h2>
+            </div>
+            <ul class="timer">
+              <li class="d-inline-flex flex-column justify-content-center align-items-center">
+                <div id="day" class="timer_num">03</div>
+                <div class="timer_unit">Dia</div>
+              </li>
+              <li class="d-inline-flex flex-column justify-content-center align-items-center">
+                <div id="hour" class="timer_num">15</div>
+                <div class="timer_unit">Horas</div>
+              </li>
+              <li class="d-inline-flex flex-column justify-content-center align-items-center">
+                <div id="minute" class="timer_num">45</div>
+                <div class="timer_unit">Minutos</div>
+              </li>
+              <li class="d-inline-flex flex-column justify-content-center align-items-center">
+                <div id="second" class="timer_num">23</div>
+                <div class="timer_unit">Segundos</div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
 
 
         <div class="container">
