--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   </div>
 
 
-  
+
   <div class="deal_ofthe_week">
     <div class="container">
       <div class="row align-items-center">
@@ -144,48 +144,46 @@
   </div>
 
 
-
-
-
-
-
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12">
-              <img src="Alguma foto de oferta">
+  <div class="benefit">
+    <div class="container">
+      <div class="row benefit_row">
+        <div class="col-lg-3 benefit_col">
+          <div class="benefit_item d-flex flex-row align-items-center">
+            <div class="benefit_icon"><i class="fa fa-truck" aria-hidden="true"></i></div>
+            <div class="benefit_content">
+              <h6>Frete Gratis</h6>
             </div>
           </div>
         </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <h2><center>Produtos em Destaques</center></h2>
+        <div class="col-lg-3 benefit_col">
+          <div class="benefit_item d-flex flex-row align-items-center">
+            <div class="benefit_icon"><i class="fa fa-money" aria-hidden="true"></i></div>
+            <div class="benefit_content">
+              <h6>Forma de Pagamento</h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 benefit_col">
+          <div class="benefit_item d-flex flex-row align-items-center">
+            <div class="benefit_icon"><i class="fa fa-undo" aria-hidden="true"></i></div>
+            <div class="benefit_content">
+              <h6>Devolução em 45 dias </h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 benefit_col">
+          <div class="benefit_item d-flex flex-row align-items-center">
+            <div class="benefit_icon"><i class="fa fa-clock-o" aria-hidden="true"></i></div>
+            <div class="benefit_content">
+              <h6>Aberto todos os dias</h6>
+              <p>8AM - 22PM</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="container">
-          <div class="row">
-            <div class="col-sm-3">
-              <img src="FOTO CORRESPONDENTE AO PRODUTO" class="rounded-circle" alt="Cinque Terre" width="304" height="236"> 
-              <h5><center> Nome do Produto</center></h5>
-              <h6><center>POR "VALOR"</center></h6>
-            </div>
-            <div class="col-sm-3">
-             <img src="FOTO CORRESPONDENTE AO PRODUTO" class="rounded-circle" alt="Cinque Terre" width="304" height="236"> 
-              <h5><center> Nome do Produto</center></h5>
-              <h6><center>POR "VALOR"</center></h6>
-            </div>
-            <div class="col-sm-3">        
-              <img src="FOTO CORRESPONDENTE AO PRODUTO" class="rounded-circle" alt="Cinque Terre" width="304" height="236"> 
-              <h5><center> Nome do Produto</center></h5>
-              <h6><center>POR "VALOR"</center></h6>
-             </div>
-             <div class="col-sm-3">
-              <img src="FOTO CORRESPONDENTE AO PRODUTO" class="rounded-circle" alt="Cinque Terre" width="304" height="236">
-              <h5><center> Nome do Produto</center></h5>
-              <h6><center>POR "VALOR"</center></h6>
-            </div>
-          </div>
-        </div>
+    </div>
+  </div>
+
+
       </body>
     </html>
