--- a/index.html
+++ b/index.html
@@ -13,14 +13,70 @@
         <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/animate.css">
         <link rel="stylesheet" type="text/css" href="styles/main_styles.css">
         <link rel="stylesheet" type="text/css" href="styles/responsive.css">
-               
-      </head>
-
-
+     </head>
 
       <body>
 
-        <div class="main_nav_container">
+     <div class="super_container">
+
+       <header class="header trans_300">
+
+
+        <div class="top_nav">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="top_nav_left">frete grátis em todos os pedidos de R$ 50</div>
+          </div>
+          <div class="col-md-6 text-right">
+            <div class="top_nav_right">
+              <ul class="top_nav_menu">
+
+                <!-- Currency / Language / My Account -->
+
+                <li class="currency">
+                  <a href="#">
+                    usd
+                    <i class="fa fa-angle-down"></i>
+                  </a>
+                  <ul class="currency_selection">
+                    <li><a href="#">cad</a></li>
+                    <li><a href="#">aud</a></li>
+                    <li><a href="#">eur</a></li>
+                    <li><a href="#">gbp</a></li>
+                  </ul>
+                </li>
+                <li class="language">
+                  <a href="#">
+                    Português
+                    <i class="fa fa-angle-down"></i>
+                  </a>
+                  <ul class="language_selection">
+                    <li><a href="#">Ingles</a></li>
+                    <li><a href="#">Frances</a></li>
+                    <li><a href="#">Italiano</a></li>
+                    <li><a href="#">Alemão</a></li>
+                    <li><a href="#">Espanhol</a></li>
+                  </ul>
+                </li>
+                <li class="account">
+                  <a href="#">
+                    Minha Conta
+                    <i class="fa fa-angle-down"></i>
+                  </a>
+                  <ul class="account_selection">
+                    <li><a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i>Fazer Login</a></li>
+                    <li><a href="#"><i class="fa fa-user-plus" aria-hidden="true"></i>Registrar</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="main_nav_container">
         <div class="container">
           <div class="row">
             <div class="col-lg-12 text-right">
@@ -54,7 +110,9 @@
         </div>
       </div>
 
-           <div class="main_slider" style="background-image:url(images/slider_1.jpg)">
+    </header>  
+
+       <div class="main_slider" style="background-image:url(images/slider_1.jpg)">
           <div class="container fill_height">
             <div class="row align-items-center fill_height">
               <div class="col">
@@ -67,35 +125,35 @@
           </div>
         </div>
 
+         <div class="banner">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="banner_item align-items-center" style="background-image:url(images/banner_1.jpg)">
+                  <div class="banner_category">
+                    <a href="categories.html">Mulher</a>
+                  </div>
+                </div>
+              </div>
 
-      <div class="banner">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="banner_item align-items-center" style="background-image:url(images/banner_1.jpg)">
-            <div class="banner_category">
-              <a href="categories.html">Mulher</a>
+              <div class="col-md-4">
+                <div class="banner_item align-items-center" style="background-image:url(images/banner_2.jpg)">
+                  <div class="banner_category">
+                    <a href="categories.html">Ifantil</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="banner_item align-items-center" style="background-image:url(images/banner_3.jpg)">
+                  <div class="banner_category">
+                    <a href="categories.html">Homem</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="col-md-4">
-          <div class="banner_item align-items-center" style="background-image:url(images/banner_2.jpg)">
-            <div class="banner_category">
-              <a href="categories.html">Ifantil</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="banner_item align-items-center" style="background-image:url(images/banner_3.jpg)">
-            <div class="banner_category">
-              <a href="categories.html">Homem</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
 
 
@@ -135,6 +193,8 @@
       </div>
     </div>
   </div>
+
+  
 
 
   <div class="benefit">
@@ -244,6 +304,6 @@
 <script src="js/custom.js"></script>
 
 
-
-      </body>
-    </html>
+ </body>
+    
+</html>
