Interligando as paginas index, login e produto

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
               <nav class="navbar">
                 <ul class="navbar_menu">
                   <li><a href="#">principal</a></li>
-                  <li><a href="#">fazer compras</a></li>
+                  <li><a href="produto.html">fazer compras</a></li>
                   <li><a href="#">promoções</a></li>
                   <li><a href="#">blog</a></li>
-                  <li><a href="contact.html">login</a></li>
+                  <li><a href="login.html">login</a></li>
                 </ul>
                 <ul class="navbar_user">
                   <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
@@ -131,7 +131,7 @@
               <div class="col-md-4">
                 <div class="banner_item align-items-center" style="background-image:url(images/banner_1.jpg)">
                   <div class="banner_category">
-                    <a href="categories.html">Mulher</a>
+                    <a href="produto.html">Mulher</a>
                   </div>
                 </div>
               </div>
@@ -139,14 +139,14 @@
               <div class="col-md-4">
                 <div class="banner_item align-items-center" style="background-image:url(images/banner_2.jpg)">
                   <div class="banner_category">
-                    <a href="categories.html">Ifantil</a>
+                    <a href="produto.html">Ifantil</a>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="banner_item align-items-center" style="background-image:url(images/banner_3.jpg)">
                   <div class="banner_category">
-                    <a href="categories.html">Homem</a>
+                    <a href="produto.html">Homem</a>
                   </div>
                 </div>
               </div>
@@ -194,7 +194,7 @@
     </div>
   </div>
 
-  
+
 
 
   <div class="benefit">
@@ -268,7 +268,7 @@
             <ul class="footer_nav">
               <li><a href="#">Blog</a></li>
               <li><a href="#">FAQs</a></li>
-              <li><a href="contact.html">Login</a></li>
+              <li><a href="login.html">Login</a></li>
             </ul>
           </div>
         </div>
