--- a/login.html
+++ b/login.html
@@ -78,3 +78,21 @@
 				</div>
 			</div>
 		</div>
+<div class="main_nav_container">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 text-right">
+						<div class="logo_container">
+							<a href="#">Gi<span>Lu</span></a>
+						</div>
+						<nav class="navbar">
+							
+							<div class="hamburger_container">
+								<i class="fa fa-bars" aria-hidden="true"></i>
+							</div>
+						</nav>
+					</div>
+				</div>
+			</div>
+		</div>
+
