Interligando a pagina de longin com a pagina Index atraves do HOME

--- a/login.html
+++ b/login.html
@@ -78,7 +78,10 @@
 				</div>
 			</div>
 		</div>
-<div class="main_nav_container">
+
+		<!-- Main Navigation -->
+
+		<div class="main_nav_container">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 text-right">
@@ -112,3 +115,78 @@
 			</div>
 		</div>
 
+	</header>
+
+	<div class="fs_menu_overlay"></div>
+
+	<!-- Hamburger Menu -->
+
+	<div class="hamburger_menu">
+		<div class="hamburger_close"><i class="fa fa-times" aria-hidden="true"></i></div>
+		<div class="hamburger_menu_content text-right">
+			<ul class="menu_top_nav">
+				<li class="menu_item has-children">
+					<a href="#">
+						usd
+						<i class="fa fa-angle-down"></i>
+					</a>
+					<ul class="menu_selection">
+						<li><a href="#">cad</a></li>
+						<li><a href="#">aud</a></li>
+						<li><a href="#">eur</a></li>
+						<li><a href="#">gbp</a></li>
+					</ul>
+				</li>
+				<li class="menu_item has-children">
+					<a href="#">
+						Português
+						<i class="fa fa-angle-down"></i>
+						</a>
+						<ul class="language_selection">
+						<li><a href="#">Ingles</a></li>
+						<li><a href="#">Frances</a></li>
+						<li><a href="#">Italiano</a></li>
+						<li><a href="#">Alemão</a></li>
+						<li><a href="#">Espanhol</a></li>
+						</ul>
+				</li>
+				<li class="menu_item has-children">
+					<a href="#">
+						Minha conta
+						<i class="fa fa-angle-down"></i>
+					</a>
+					<ul class="menu_selection">
+						li><a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i>Fazer Login</a></li>
+						<li><a href="#"><i class="fa fa-user-plus" aria-hidden="true"></i>Registrar</a></li>
+					</ul>
+				</li>
+				<li><a href="#">principal</a></li>
+								<li><a href="#">fazer compras</a></li>
+								<li><a href="#">promoções</a></li>
+								<li><a href="#">blog</a></li>
+								<li><a href="contact.html">login</a></li><li><a href="#">principal</a></li>
+								<li><a href="#">fazer compras</a></li>
+								<li><a href="#">promoções</a></li>
+								<li><a href="#">blog</a></li>
+								<li><a href="contact.html">login</a></li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="container contact_container">
+		<div class="row">
+			<div class="col">
+
+				<!-- Breadcrumbs -->
+
+				<div class="breadcrumbs d-flex flex-row align-items-center">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li class="active"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i>Contatos</a></li>
+					</ul>
+				</div>
+
+			</div>
+		</div>
+
+		
