Adicionando google map a pagina de login html

--- a/login.html
+++ b/login.html
@@ -184,4 +184,20 @@
 						<li><a href="index.html">Home</a></li>
 						<li class="active"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i>Contatos</a></li>
 					</ul>
-				
+				</div>
+
+			</div>
+		</div>
+
+		<!-- Map Container -->
+
+		<div class="row">
+			<div class="col">
+				<div id="google_map">
+					<div class="map_container">
+						<div id="map"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+
