Adicionando meios de contatos que os clientes pode ter ao acessar a pagina de login html

--- a/login.html
+++ b/login.html
@@ -200,4 +200,23 @@
 				</div>
 			</div>
 		</div>
+<!-- Contact Us -->
 
+		<div class="row">
+
+			<div class="col-lg-6 contact_col">
+				<div class="contact_contents">
+					<h1>Contatos</h1>
+					<p>Aqui estão muitas maneiras de nos contatar. Você pode nos fazer uma ligação, nos enviar um e-mail, escolha o que mais lhe convier.</p>
+					<div>
+						<p>(082) 8856-6688</p>
+						<p>gilu.info@gmail.com</p>
+					</div>
+					<div>
+						<p></p>
+					</div>
+					<div>
+						<p>Horário de funcionamento: das 8:00 às 22:00 de segunda a sexta</p>
+						<p>Domingo: fechado</p>
+					</div>
+				</div>
