Adicionando Formulario de login a pagina login html

--- a/login.html
+++ b/login.html
@@ -233,6 +233,26 @@
 				</div>
 
 			</div>
+<div class="col-lg-6 get_in_touch_col">
+				<div class="get_in_touch_contents">
+					<h1>FAÇA SEU LOGIN</h1>
+					<p>Preencha o formulário abaixo </p>
+					<form action="post">
+						<div>
+							<input id="input_name" class="form_input input_name input_ph" type="text" name="name" placeholder="Nome completo" required="required" data-error="Name is required.">
+							<input id="input_email" class="form_input input_email input_ph" type="email" name="email" placeholder="Digite seu e-mail" required="required" data-error="Valid email is required.">
+							<textarea id="input_message" class="input_ph input_message" name="message"  placeholder="Digite sua mensagem para a empresa" rows="3" required data-error="Please, write us a message."></textarea>
+						</div>
+						<div>
+							<button id="review_submit" type="submit" class="red_button message_submit_btn trans_300" value="Submit">FAZER LOGIN</button>
+						</div>
+					</form>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="styles/bootstrap4/popper.js"></script>
 <script src="styles/bootstrap4/bootstrap.min.js"></script>
