Modificando  o horario de funcionamendo da pagina de login html

--- a/login.html
+++ b/login.html
@@ -216,7 +216,7 @@
 						<p></p>
 					</div>
 					<div>
-						<p>Horário de funcionamento: das 8:00 às 22:00 de segunda a sexta</p>
+						<p>Horário de funcionamento: das 8:00 às 22:00 de segunda a sabado</p>
 						<p>Domingo: fechado</p>
 					</div>
 				</div>
