Adicionando menu e paginas html

--- a/index.html
+++ b/index.html
@@ -89,7 +89,15 @@
                   <li><a href="produto.html">fazer compras</a></li>
                   <li><a href="#">promoções</a></li>
                   <li><a href="#">blog</a></li>
-                  <li><a href="login.html">login</a></li>
+                  <li><a href="#">Menu<i class="fa fa-angle-down"></i></a>
+                    <ul class="language_selection">
+                    <li><a href="login.html"></a>Fazer login</li>
+                    <li><a href="faleconosco.html"></a>Fale conosco</li>
+                    <li><a href="rastreamento.html"></a>Rastreamento</li>
+                    <li><a href=""></a>Produtos mais vendidos</li>
+                    </ul>
+                  </li>
+
                 </ul>
                 <ul class="navbar_user">
                   <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
